attached_assets/Pasted--workspace-cd-ai-language-mkdir-p-build-cd-build-cmake-make-ai-lang-i-Co-1743337752077.txt
~/workspace$ cd ai_language && mkdir -p build && cd build && cmake .. && make && ./ai_lang -i
-- Configuring done (0.0s)
-- Generating done (0.0s)
-- Build files have been written to: /home/runner/workspace/ai_language/build
[ 16%] Building CXX object CMakeFiles/ai_language_lib.dir/src/interpreter.cpp.o
/home/runner/workspace/ai_language/src/interpreter.cpp: In constructor ‘ai_language::Interpreter::Interpreter()’:
/home/runner/workspace/ai_language/src/interpreter.cpp:14:46: error: no matching function for call to ‘ai_language::Lexer::Lexer()’
   14 | Interpreter::Interpreter() : m_hasError(false) {
      |                                              ^
In file included from /home/runner/workspace/ai_language/src/../include/interpreter.h:10,
                 from /home/runner/workspace/ai_language/src/interpreter.cpp:7:
/home/runner/workspace/ai_language/src/../include/lexer.h:86:14: note: candidate: ‘ai_language::Lexer::Lexer(const std::string&)’
   86 |     explicit Lexer(const std::string& source);
      |              ^~~~~
/home/runner/workspace/ai_language/src/../include/lexer.h:86:14: note:   candidate expects 1 argument, 0 provided
/home/runner/workspace/ai_language/src/../include/lexer.h:80:7: note: candidate: ‘ai_language::Lexer::Lexer(const ai_language::Lexer&)’
   80 | class Lexer {
      |       ^~~~~
/home/runner/workspace/ai_language/src/../include/lexer.h:80:7: note:   candidate expects 1 argument, 0 provided
/home/runner/workspace/ai_language/src/../include/lexer.h:80:7: note: candidate: ‘ai_language::Lexer::Lexer(ai_language::Lexer&&)’
/home/runner/workspace/ai_language/src/../include/lexer.h:80:7: note:   candidate expects 1 argument, 0 provided
/home/runner/workspace/ai_language/src/interpreter.cpp:26:13: error: ‘class ai_language::Lexer’ has no member named ‘setErrorHandler’
   26 |     m_lexer.setErrorHandler([this](const std::string& message) {
      |             ^~~~~~~~~~~~~~~
/home/runner/workspace/ai_language/src/interpreter.cpp: In member function ‘void ai_language::Interpreter::interpret(const std::string&)’:
/home/runner/workspace/ai_language/src/interpreter.cpp:51:53: error: no matching function for call to ‘ai_language::Lexer::tokenize(const std::string&)’
   51 |         std::vector<Token> tokens = m_lexer.tokenize(source);
      |                                     ~~~~~~~~~~~~~~~~^~~~~~~~
/home/runner/workspace/ai_language/src/../include/lexer.h:92:24: note: candidate: ‘std::vector<ai_language::Token> ai_language::Lexer::tokenize()’
   92 |     std::vector<Token> tokenize();
      |                        ^~~~~~~~
/home/runner/workspace/ai_language/src/../include/lexer.h:92:24: note:   candidate expects 0 arguments, 1 provided
/home/runner/workspace/ai_language/src/interpreter.cpp: In member function ‘void ai_language::Interpreter::resetError()’:
/home/runner/workspace/ai_language/src/interpreter.cpp:82:13: error: ‘class ai_language::Lexer’ has no member named ‘resetError’; did you mean ‘getError’?
   82 |     m_lexer.resetError();
      |             ^~~~~~~~~~
      |             getError
make[2]: *** [CMakeFiles/ai_language_lib.dir/build.make:104: CMakeFiles/ai_language_lib.dir/src/interpreter.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:86: CMakeFiles/ai_language_lib.dir/all] Error 2
make: *** [Makefile:91: all] Error 2